# falcon-login

./: Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  main2.py  pyproject.toml
adapters/: dynamodb.py  errors.py
api/: handlers.py  resources.py
docker/dynamodb/: shared-local-instance.db
domain/: errors.py  user.py
frontend/: ECOSTEP(HTML).html  LOGIN.css  NCB.js  README.md  about-it.html  home-section.html  login.html  styles.css  stylesaboutis.css  styleshome.css
table_structure/: users.json
